--- a/EIS-ECM/notebook_aia_eis_tests.ipynb
+++ b/EIS-ECM/notebook_aia_eis_tests.ipynb
@@ -53,6 +53,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "444"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tr_dataset)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
